register/login almost done

--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -4,16 +4,17 @@
         <div class="screen">
             <div class="screen__content">
                 <form class="login" action="/login" method="POST">
+                    {% csrf_token %}
                     <div class="login__field">
                         <i class="login__icon fas fa-user"></i>
-                        <input type="text" class="login__input" placeholder="User name / Email">
+                        <input type="text" class="login__input" id="email" name="email" placeholder="Email">
                     </div>
                     <div class="login__field">
                         <i class="login__icon fas fa-lock"></i>
-                        <input type="password" class="login__input" placeholder="Password">
+                        <input type="password" class="login__input" id="password" name="password" placeholder="Password">
                     </div>
                     <button class="button login__submit">
-                        <span class="button__text">Log In Now</span>
+                        <span class="button__text">Log In</span>
                         <i class="button__icon fas fa-chevron-right"></i>
                     </button>
                 </form>
