--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -4,9 +4,10 @@
         <div class="screen">
             <div class="screen__content">
                 <form class="register" action="/register" method="POST">
+                    {% csrf_token %}
                     <div class="register__field">
                         <i class="register__icon fas fa-user"></i>
-                        <input type="text" id="username-email" name="username-email" class="register__input" placeholder="User name / Email">
+                        <input type="text" id="email" name="email" class="register__input" placeholder="Email">
                     </div>
                     <div class="register__field">
                         <i class="register__icon fas fa-lock"></i>
@@ -14,10 +15,10 @@
                     </div>
                     <div class="register__field">
                         <i class="register__icon fas fa-lock"></i>
-                        <input type="password" name="repeat-password" id="repeat-password" class="register__input" placeholder="Repeat password">
+                        <input type="password" name="repeat_password" id="repeat_password" class="register__input" placeholder="Repeat password">
                     </div>
                     <button class="button register__submit" type="submit">
-                        <span class="button__text">Sign Up</span>
+                        <span class="button__text">Register</span>
                         <i class="button__icon fas fa-chevron-right"></i>
                     </button>
                 </form>
