register/login working perfect

--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -5,6 +5,11 @@
             <div class="screen__content">
                 <form class="login" action="/login" method="POST">
                     {% csrf_token %}
+                    {% if errors %}
+                        {% for error in errors %}
+                            <p>{{ error }}</p>
+                        {% endfor %}
+                    {% endif %}
                     <div class="login__field">
                         <i class="login__icon fas fa-user"></i>
                         <input type="text" class="login__input" id="email" name="email" placeholder="Email">
@@ -18,14 +23,6 @@
                         <i class="button__icon fas fa-chevron-right"></i>
                     </button>
                 </form>
-                <div class="social-login">
-                    <h3>log in via</h3>
-                    <div class="social-icons">
-                        <a href="#" class="social-login__icon fab fa-instagram"></a>
-                        <a href="#" class="social-login__icon fab fa-facebook"></a>
-                        <a href="#" class="social-login__icon fab fa-twitter"></a>
-                    </div>
-                </div>
             </div>
             <div class="screen__background">
                 <span class="screen__background__shape screen__background__shape4"></span>
