--- a/backend/templates/layouts/header.html
+++ b/backend/templates/layouts/header.html
@@ -185,6 +185,10 @@
   <script src="{% static 'assets/js/main.js' %}"></script>
   <script src="{% static 'custom/js/custom-script.js' %}"></script>
 
+  <!-- JQUERY SCRIPT -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
+
 
 </body>
 
