--- a/backend/templates/history.html
+++ b/backend/templates/history.html
@@ -23,13 +23,16 @@
                 <thead>
                   <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Position</th>
-                    <th scope="col">Age</th>
-                    <th scope="col">Start Date</th>
+                    <th scope="col">Target</th>
+                    <th scope="col">Name League</th>
+                    <th scope="col">Year</th>
+                    <th scope="col">Name Team</th>
+                    <th scope="col">Name Player</th>
+                    <th scope="col">Creation Date</th>
                   </tr>
                 </thead>
                 <tbody>
+                <!--EXAMPLE
                   <tr>
                     <th scope="row">1</th>
                     <td>Brandon Jacob</td>
@@ -37,34 +40,18 @@
                     <td>28</td>
                     <td>2016-05-25</td>
                   </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Bridie Kessler</td>
-                    <td>Developer</td>
-                    <td>35</td>
-                    <td>2014-12-05</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Ashleigh Langosh</td>
-                    <td>Finance</td>
-                    <td>45</td>
-                    <td>2011-08-12</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">4</th>
-                    <td>Angus Grady</td>
-                    <td>HR</td>
-                    <td>34</td>
-                    <td>2012-06-11</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5</th>
-                    <td>Raheem Lehner</td>
-                    <td>Dynamic Division Officer</td>
-                    <td>47</td>
-                    <td>2011-04-19</td>
-                  </tr>
+                  -->
+                {% if requests %}
+                  {% for req in requests %}
+                    <tr>
+                      <th scope="row">{{ forloop.counter }}</th>
+                      {% for element in req %}
+                        <td>{{ element }}</td>
+                      {% endfor %}
+                    </tr>
+                  {% endfor %}
+                {% endif %}
+
                 </tbody>
               </table>
               <!-- End Table with stripped rows -->
