--- a/backend/templates/request.html
+++ b/backend/templates/request.html
@@ -105,15 +105,19 @@
                           <canvas id="lineChart" style="max-height: 400px;"></canvas>
 
                           <script>
-                            {% if years %}var x_label = {{ years }};{% endif %}
-                            {% if values %}var y_label = {{ values }};{% endif %}
-
                             let pad_data = values => {
                               // Add null values to the beginning of the array to plot the line correctly
                               var padded_data = new Array(y_label.length).fill(null).concat(values);
                               padded_data[y_label.length-1] = y_label[y_label.length-1];
                               return padded_data;
                             }
+
+                            let na_to_null = values => {
+                              return values.map(value => value == -1? null : value);
+                            }
+
+                            {% if years %}var x_label = na_to_null({{ years }});{% endif %}
+                            {% if values %}var y_label = na_to_null({{ values }});{% endif %}
 
                             {% if values_pred %}
                               var y_label_pred = pad_data({{ values_pred }});
@@ -134,6 +138,7 @@
                                     label: 'Function value player',
                                     data: y_label,
                                     fill: false,
+                                    spanGaps: true,
                                     borderColor: 'rgb(75, 192, 192)',
                                     tension: 0.1
                                   {% if values_pred %}
