--- a/backend/templates/request.html
+++ b/backend/templates/request.html
@@ -128,8 +128,8 @@
                               var x_label = na_to_null(data["year"].concat(pred["year"]));
                               var y_label = na_to_null(data[key]);
                               var y_label_pred = pad_data(pred[key], y_label);
-                              var lower = pad_data(pred[key].map(value => value*0.75), y_label);
-                              var upper = pad_data(pred[key].map(value => value*1.25), y_label);
+                              var lower = pad_data(pred[key].map((value, i) => value*(0.75 - i*0.1)), y_label);
+                              var upper = pad_data(pred[key].map((value, i) => value*(1.25 + i*0.1)), y_label);
 
                               console.log(y_label_pred);
                               new Chart(document.querySelector("#lineChart-{{key}}"), {
